# quadctl

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  justfile
.github/workflows/: checks.yml
src/: config.rs  lib.rs  main.rs  remote_check.rs  ssh.rs
tests/: remote_check.rs
tests/data/missing-dependency/: inventory.toml
tests/data/missing-dependency/node01/: parent.container
tests/data/nominal/: inventory.toml
tests/data/nominal/node01/: parent.network  parent.volume
