[package]
name = "quadctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
openssh = { version = "0.11.6", features = ["native-mux"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
